---Major Midway Update---
New update, new things to cry about

Major:
100%, no lie, for real this time fixed the apps structure, and it will stay that way.
Added downloads systemIcon
Added Notifications systemIcon
Multiple new components
Major changes to structure

Co-Authored-By: Pixel <79420307+pixelkingliam@users.noreply.github.com>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
   <meta name="transparent" content="true">
   <title>MT-GO Launcher</title>
   <link href="./src/style.css" rel="stylesheet">
+  <link href="https://pastebin.com/raw/LHRPBQ2X" rel="stylesheet">
+
 </head>
 <body>
   <div class="outerApp">
@@ -35,7 +37,6 @@
   top: 5px;
   width: 21px;
   height: 24px;
-  z-index: 9;
   border-radius: 120px;
   animation: ring 1s infinite alternate;
 
@@ -75,7 +76,6 @@
 
   .mainapp {
     background-color: black;
-    z-index: 9;
   }
 
   .home {
@@ -84,7 +84,6 @@
     top: 12px;
     width: 19px;
     height: 24px;
-    z-index: 8;
   }
 
   .minimize {
@@ -94,7 +93,6 @@
     top: 16px;
     width: 11px;
     height: 2px;
-    z-index: 7;
   }
 
   .close {
@@ -103,7 +101,6 @@
     top: 10px;
     width: 14px;
     height: 14px;
-    z-index: 6;
   }
 
   .branding {
@@ -113,7 +110,6 @@
     top: 9px;
     width: 147px;
     height: 16px;
-    z-index: 9;
     --wails-draggable: drag
   }
 
@@ -124,7 +120,6 @@
     top: 6px;
     width: 22px;
     height: 22px;
-    z-index: 8;
   }
 
   .main_container {
@@ -135,7 +130,6 @@
     top: 70px;
     width: 903px;
     height: 592px;
-    z-index: 4;
   }
 </style>
 
