--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,14 +10,11 @@
   <link href="https://pastebin.com/raw/LHRPBQ2X" rel="stylesheet">
 
 </head>
+
 <body>
   <div class="outerApp">
     <div class="main-container" id="app">
       <script src="./src/main.js" type="module"></script>
-      <script src="./src/components/js/notifacation.js" type="module"></script>
-
-      <script>
-      </script>
     </div>
   </div>
 </body>
@@ -26,52 +23,54 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    /* Hide overflow */
     position: absolute;
     color: dimgray;
-    background-color: transparent;
+    background: rgb(1, 4, 9);
+    background: linear-gradient(90deg, rgba(1, 4, 9, 1) 0%, rgba(7, 11, 16, 0.3) 50%, rgba(13, 17, 23, 1) 100%);
   }
+
   .notification {
-  position: absolute;
-  left: 909px;
-  top: 5px;
-  width: 21px;
-  height: 24px;
-  border-radius: 120px;
-  animation: ring 1s infinite alternate;
+    position: absolute;
+    left: 909px;
+    top: 5px;
+    width: 21px;
+    height: 24px;
+    border-radius: 120px;
 
-}
+  }
 
-.notification:hover {
-  border: white 1px solid;
-  background-color: white;
-  animation: ring 1.5s infinite alternate;
+  .notification:active {
+    border: white 1px solid;
+    animation: ring 1.5s infinite alternate;
+  }
 
-}
+  @keyframes ring {
+    0% {
+      transform: rotate(0deg);
+    }
 
-@keyframes ring {
-  0% {
-    transform: rotate(0deg);
+    50% {
+      transform: rotate(15deg);
+    }
+
+    75% {
+      transform: rotate(-15deg);
+    }
+
+    100% {
+      transform: rotate(0deg);
+    }
   }
-  50% {
-    transform: rotate(15deg);
-  }
-  75% {
-    transform: rotate(-15deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
 
 
   #app {
-    background-color: #0d1117;
+    background-color: transparent;
     position: absolute;
     width: 100%;
     height: 100%;
     overflow: auto;
-    /* Enable scrolling */
+    background: rgb(1, 4, 9);
+    background: linear-gradient(90deg, rgba(1, 4, 9, 1) 0%, rgba(7, 11, 16, 0.3) 50%, rgba(13, 17, 23, 1) 100%);
   }
 
   .mainapp {
