[Mixed] Upload latest.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="main-container" id="app">
-      <script src="./src/main.js" type="module"></script>
+  <div class="main-container" id="app">
+    <script src="./src/main.js" type="module"></script>
   </div>
 </body>
 <style>
@@ -67,7 +67,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background: url("/src/assets/images/mtga-glow-background.png"), transparent;
+    background-image: url("@/assets/images/R3XfcOd.png");
+    background-color: var(--select);
     background-repeat: no-repeat, no-repeat;
     background-position: bottom, center;
     background-blend-mode: hard-light;
@@ -122,46 +123,46 @@
   }
 
   @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
-body {
-  margin: 0;
-  line-height: normal;
-}
-:root {
-  /* fonts */
-  --font-inter: Inter;
 
-  /* font sizes */
-  --font-size-13xl: 32px;
-  --font-size-xs: 12px;
-  --font-size-base: 16px;
+  body {
+    margin: 0;
+    line-height: normal;
+  }
 
-  /* Colors */
-  --color-gray-100: #1e1e1e;
-  --color-gray-300: #171719;
-  --color-gray-200: #151618;
-  --color-white: #fff;
-  --color-silver-100: #bdbdc0;
-  --color-silver-200: rgba(189, 189, 192, 0.08);
-  --color-crimson: #e64343;
-  --color-darkslateblue-100: #375a9b;
-  --color-mediumseagreen: #36ba5f;
+  :root {
+    /* fonts */
+    --font-inter: Inter;
 
-  /* Gaps */
-  --gap-5xl: 24px;
+    /* font sizes */
+    --font-size-13xl: 32px;
+    --font-size-xs: 12px;
+    --font-size-base: 16px;
 
-  /* Paddings */
-  --padding-base: 16px;
-  --padding-13xl: 32px;
-  --padding-5xs: 8px;
-  --padding-8xs: 5px;
-  --padding-3xs: 10px;
+    /* Colors */
+    --color-gray-100: #1e1e1e;
+    --color-gray-300: #171719;
+    --color-gray-200: #151618;
+    --color-white: #fff;
+    --color-silver-100: #bdbdc0;
+    --color-silver-200: rgba(189, 189, 192, 0.08);
+    --color-crimson: #e64343;
+    --color-darkslateblue-100: #375a9b;
+    --color-mediumseagreen: #36ba5f;
 
-  /* Border radiuses */
-  --br-5xs: 8px;
-  --br-8869xl: 8888px;
-}
+    /* Gaps */
+    --gap-5xl: 24px;
 
+    /* Paddings */
+    --padding-base: 16px;
+    --padding-13xl: 32px;
+    --padding-5xs: 8px;
+    --padding-8xs: 5px;
+    --padding-3xs: 10px;
 
+    /* Border radiuses */
+    --br-5xs: 8px;
+    --br-8869xl: 8888px;
+  }
 </style>
 
 </html>
